WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21951
SVGElementInstance.cpp does not compile under v8
https://bugs.webkit.org/show_bug.cgi?id=21951
Summary
SVGElementInstance.cpp does not compile under v8
Eric Seidel (no email)
Reported
2008-10-29 12:18:22 PDT
SVGElementInstance.cpp does not compile under v8 v8 has no GCController.h (and doesn't work with quite the same bindings/gc model), so the gcController() calls in SVGElementInstance.cpp should be jsc only. This is also a JSC-only hack anyway (as the comment makes clear).
Attachments
Fix the v8 build
(1.97 KB, patch)
2008-10-29 12:20 PDT
,
Eric Seidel (no email)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2008-10-29 12:20:16 PDT
Created
attachment 24752
[details]
Fix the v8 build WebCore/ChangeLog | 10 ++++++++++ WebCore/svg/SVGElementInstance.cpp | 9 +++++++-- 2 files changed, 17 insertions(+), 2 deletions(-)
Darin Adler
Comment 2
2008-10-29 13:17:18 PDT
Comment on
attachment 24752
[details]
Fix the v8 build Looks fine. r=me
Eric Seidel (no email)
Comment 3
2008-12-02 12:25:31 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/svg/SVGElementInstance.cpp Committed
r38909
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug