        Reviewed by Darin Adler.

Wrap a JSC-only hack in a USE(JSC) block to fix the v8 build.
        https://bugs.webkit.org/show_bug.cgi?id=21951

        * svg/SVGElementInstance.cpp:
        (WebCore::SVGElementInstance::forgetWrapper):

git-svn-id: svn://svn.chromium.org/blink/trunk@38909 bbb929c8-8fbe-4397-9dbb-9b2b20218538